--- a/README.org
+++ b/README.org
@@ -55,7 +55,7 @@
 
 #+BEGIN_ABSTRACT
 The purpose of this document it is to describe the use of this easy
-web application.
+web application. *Part of this code is a fork from Jeff Leek work.*
 #+END_ABSTRACT
 
 * Main objective
